<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanCardResult">

    <TextView
        android:id="@+id/result_screen_heading_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_screen_heading"
        android:gravity="center|top"
        style="@style/heading" />
    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_below="@+id/result_screen_heading_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/label_color"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/demo_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/label_color"
            android:layout_marginTop="8dp"
            android:text="@string/father_name"/>
        <TextView
            android:id="@+id/txt_father_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/demo_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/label_color"
            android:layout_marginTop="8dp"
            android:text="@string/dob"/>
        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/date_demo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/label_color"
            android:layout_marginTop="8dp"
            android:text="@string/pan_card_no"/>
        <TextView
            android:id="@+id/txt_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/number_txt"/>

    </LinearLayout>
    <ImageView
        android:background="#59E2E2E2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_layout"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/pancard" />
</RelativeLayout>